// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with emotion environment generates styles for scenario with nested pseudoclass 1`] = `
[dir="rtl"] .emotion-0 {
  color: red;
  padding-left: 10px;
  padding-bottom: 10px;
}

.emotion-0 {
  color: red;
  padding-right: 10px;
  padding-bottom: 10px;
}

[dir="rtl"] .emotion-0::before,
[dir="rtl"] .emotion-0::after {
  content: "";
  color: black;
}

.emotion-0::before,
.emotion-0::after {
  content: "";
  color: black;
}

<body>
  
      
  <div
    id="container"
  >
    
    
    <style
      data-emotion="test"
      data-s=""
    >
      
    </style>
  </div>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`with emotion environment generates styles for scenario with nested pseudoclass when speedy is disabled 1`] = `
[dir="rtl"] .emotion-0 {
  color: red;
  padding-left: 10px;
  padding-bottom: 10px;
}

.emotion-0 {
  color: red;
  padding-right: 10px;
  padding-bottom: 10px;
}

[dir="rtl"] .emotion-0::before,
[dir="rtl"] .emotion-0::after {
  content: "";
  color: black;
}

.emotion-0::before,
.emotion-0::after {
  content: "";
  color: black;
}

<body>
  
      
  <div
    id="container"
  >
    
    
    <style
      data-emotion="test"
      data-s=""
    >
      
      [dir="rtl"] .emotion-0{color:red;padding-left:10px;padding-bottom:10px;}
    </style>
    <style
      data-emotion="test"
      data-s=""
    >
      
      .emotion-0{color:red;padding-right:10px;padding-bottom:10px;}
    </style>
    <style
      data-emotion="test"
      data-s=""
    >
      
      [dir="rtl"] .emotion-0::before,[dir="rtl"] .emotion-0::after{content:"";color:black;}
    </style>
    <style
      data-emotion="test"
      data-s=""
    >
      
      .emotion-0::before,.emotion-0::after{content:"";color:black;}
    </style>
  </div>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`with emotion environment generates styles for simple scenario 1`] = `
[dir="rtl"] .emotion-0 {
  color: red;
  padding-left: 10px;
  padding-bottom: 10px;
}

.emotion-0 {
  color: red;
  padding-right: 10px;
  padding-bottom: 10px;
}

<body>
  
      
  <div
    id="container"
  >
    
    
    <style
      data-emotion="test"
      data-s=""
    >
      
    </style>
  </div>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`with emotion environment generates styles for simple scenario when speedy is disabled 1`] = `
[dir="rtl"] .emotion-0 {
  color: red;
  padding-left: 10px;
  padding-bottom: 10px;
}

.emotion-0 {
  color: red;
  padding-right: 10px;
  padding-bottom: 10px;
}

<body>
  
      
  <div
    id="container"
  >
    
    
    <style
      data-emotion="test"
      data-s=""
    >
      
      [dir="rtl"] .emotion-0{color:red;padding-left:10px;padding-bottom:10px;}
    </style>
    <style
      data-emotion="test"
      data-s=""
    >
      
      .emotion-0{color:red;padding-right:10px;padding-bottom:10px;}
    </style>
  </div>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;
